--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -20,11 +20,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '8.0.x'  
-    - name: Install Certificate
+    - name: Install Certificate with Admin Privileges
       run: |
-        $CertPassword = ConvertTo-SecureString -String kor -Force -AsPlainText
-        Import-PfxCertificate -FilePath KoOrderRegister\Technical\kor.pfx -CertStoreLocation Cert:\LocalMachine\My -Password $CertPassword
+        Start-Process powershell -ArgumentList "Import-PfxCertificate -FilePath KoOrderRegister\Technical\kor.pfx -CertStoreLocation Cert:\LocalMachine\My -Password (ConvertTo-SecureString -String kor -Force -AsPlainText)" -Verb RunAs
       shell: powershell
+
     - name: Install .NET MAUI workloads
       run: dotnet workload install maui-android
     - name: Run build script
