--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -11,9 +11,42 @@ on:
     branches: 
       - 92-create-github-runner 
 
-jobs:      
- build-android:
-    runs-on: [self-hosted, Windows]
+jobs:   
+  prepare-version:
+    runs-on: [self-hosted, Linux]
+    outputs:
+      new-version: ${{ steps.version.outputs.new-version }} 
+      versionCode: ${{ steps.version.outputs.versionCode }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Show version.txt content
+        run: cat version.txt
+      - name: Read Version
+        id: version  
+        run: |
+          awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt > temp_version.txt && mv temp_version.txt version.txt
+          MAJOR=$(awk -F'.' '{print $1}' version.txt)
+          MINOR=$(awk -F'.' '{print $2}' version.txt)
+          PATCH=$(awk -F'.' '{print $3}' version.txt)
+          VERSION_CODE=$((MAJOR * 10000 + MINOR * 100 + PATCH))
+          echo "::set-output name=new-version::$MAJOR.$MINOR.$PATCH"
+          echo "::set-output name=versionCode::$MAJOR"
+          echo "Current version: $MAJOR.$MINOR.$PATCH"
+          echo "Version Code: $MAJOR"
+      - name: Commit and Push
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add version.txt
+          git commit -m "Update version to $MAJOR.$MINOR.$PATCH" 
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.TOKEN }}
+          branch: ${{ env.branch-name }}    
+ build:
+    runs-on: [self-hosted, Windows]ű
+    needs: prepare-version
     steps:
     - uses: actions/checkout@v2
     - name: Set up .NET Core
@@ -31,3 +64,5 @@ jobs:
       run: cmd /c ".\build.bat"
       env:
         KEYPASS: ${{ secrets.KEYPASS }}
+        NEW_VERSION: ${{ steps.version.outputs.new-version }} 
+        NEW_VERSION_CODE: ${{ steps.version.outputs.versionCode }} 
