--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -17,6 +17,7 @@ jobs:
     outputs:
       new-version: ${{ steps.version.outputs.new-version }} 
       versionCode: ${{ steps.version.outputs.versionCode }}
+      minor-version: ${{ steps.version.outputs.minor-version }}
     steps:
       - uses: actions/checkout@v3
       - name: Show version.txt content
@@ -31,6 +32,7 @@ jobs:
           VERSION_CODE=$((MAJOR * 10000 + MINOR * 100 + PATCH))
           echo "::set-output name=new-version::$MAJOR.$MINOR.$PATCH"
           echo "::set-output name=versionCode::$MAJOR"
+          echo "::set-output name=minor-version::$MINOR"
           echo "Current version: $MAJOR.$MINOR.$PATCH"
           echo "Version Code: $MAJOR"
       - name: Commit and Push
@@ -70,16 +72,35 @@ jobs:
         KEYPASS: ${{ secrets.KEYPASS }}
         NEW_VERSION: ${{ needs.prepare-version.outputs.new-version }} 
         NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }} 
-    - name: Manage Release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+   - name: Install GitHub CLI
+      uses: actions/setup-gh-cli@v1
+
+    - name: Create or Update Release
+      id: create_release
       run: |
-        VERSION="${{ needs.prepare-version.outputs.new-version }}"
-        EXISTING_TAG=$(gh release list | grep -E "^v$VERSION" | awk '{print $1}')
-        if [ -z "$EXISTING_TAG" ]; then
-          # Create new release
-          gh release create "v$VERSION" ./output/*.apk ./output/*.msix --notes-file /Technical/release_base.md --title "Release v$VERSION"
+        # Define the version tag
+        VERSION="v${{ needs.prepare-version.outputs.versionCode }}${{ needs.prepare-version.outputs.minor-version }}"
+
+        # Check if the release already exists
+        if gh release view "$VERSION" --json url --jq .url; then
+          echo "Updating existing release $VERSION"
+
+          # Update the release notes and include auto-generated notes
+          gh release edit "$VERSION" \
+            --notes-file Technical/release-base.md \
+            --generate-notes
+
+          # Upload the artifacts to the existing release
+          gh release upload "$VERSION" output/*.apk output/*.msix --clobber
         else
-          # Update existing release (this may involve deleting and recreating or updating the description)
-          gh release upload "v$VERSION" ./output/*.apk ./output/*.msix --clobber
+          echo "Creating new release $VERSION"
+
+          # Create a new release with the specified notes and auto-generated notes
+          gh release create "$VERSION" \
+            --title "$VERSION" \
+            --notes-file Technical/release-base.md \
+            --generate-notes \
+            output/*.apk output/*.msix
         fi
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
