--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -1,21 +1,21 @@
 name: Windows-test
 
 env:
-  branch-name: '92-create-github-runner'  
+  branch-name: '92-create-github-runner'
 
 on:
   push:
-    branches: 
-      - 92-create-github-runner  
+    branches:
+      - 92-create-github-runner
   pull_request:
-    branches: 
-      - 92-create-github-runner 
+    branches:
+      - 92-create-github-runner
 
-jobs:   
- prepare-version:
+jobs:
+  prepare-version:
     runs-on: [self-hosted, Linux]
     outputs:
-      new-version: ${{ steps.version.outputs.new-version }} 
+      new-version: ${{ steps.version.outputs.new-version }}
       versionCode: ${{ steps.version.outputs.versionCode }}
       minor-version: ${{ steps.version.outputs.minor-version }}
     steps:
@@ -23,7 +23,7 @@ jobs:
       - name: Show version.txt content
         run: cat version.txt
       - name: Read Version
-        id: version  
+        id: version
         run: |
           awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt > temp_version.txt && mv temp_version.txt version.txt
           MAJOR=$(awk -F'.' '{print $1}' version.txt)
@@ -31,76 +31,74 @@ jobs:
           PATCH=$(awk -F'.' '{print $3}' version.txt)
           VERSION_CODE=$((MAJOR * 10000 + MINOR * 100 + PATCH))
           echo "::set-output name=new-version::$MAJOR.$MINOR.$PATCH"
-          echo "::set-output name=versionCode::$MAJOR"
+          echo "::set-output name=versionCode::$VERSION_CODE"
           echo "::set-output name=minor-version::$MINOR"
           echo "Current version: $MAJOR.$MINOR.$PATCH"
-          echo "Version Code: $MAJOR"
+          echo "Version Code: $VERSION_CODE"
       - name: Commit and Push
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add version.txt
-          git commit -m "Update version to $MAJOR.$MINOR.$PATCH" 
+          git commit -m "Update version to $MAJOR.$MINOR.$PATCH"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.TOKEN }}
-          branch: ${{ env.branch-name }}    
- build:
+          branch: ${{ env.branch-name }}
+
+  build:
     runs-on: [self-hosted, Windows]
     needs: prepare-version
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '8.0.x'  
-    - name: Debug Output Values
-      run: |
-       echo "New Version: ${{ needs.prepare-version.outputs.new-version }}"
-       echo "Version Code: ${{ needs.prepare-version.outputs.versionCode }}"
-    - name: Install Certificate with Admin Privileges
-      run: |
-        Start-Process powershell -ArgumentList "Import-PfxCertificate -FilePath KoOrderRegister\Technical\kor.pfx -CertStoreLocation Cert:\LocalMachine\My -Password (ConvertTo-SecureString -String kor -Force -AsPlainText)" -Verb RunAs
-      shell: powershell
+      - uses: actions/checkout@v2
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '8.0.x'
+      - name: Debug Output Values
+        run: |
+          echo "New Version: ${{ needs.prepare-version.outputs.new-version }}"
+          echo "Version Code: ${{ needs.prepare-version.outputs.versionCode }}"
+      - name: Install Certificate with Admin Privileges
+        run: |
+          Start-Process powershell -ArgumentList "Import-PfxCertificate -FilePath KoOrderRegister\Technical\kor.pfx -CertStoreLocation Cert:\LocalMachine\My -Password (ConvertTo-SecureString -String kor -Force -AsPlainText)" -Verb RunAs
+        shell: powershell
+      - name: Install .NET MAUI workloads
+        run: dotnet workload install maui-android
+      - name: Run build script
+        run: cmd /c ".\build.bat"
+        env:
+          KEYPASS: ${{ secrets.KEYPASS }}
+          NEW_VERSION: ${{ needs.prepare-version.outputs.new-version }}
+          NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
+      - name: Install GitHub CLI
+        uses: actions/setup-gh-cli@v1
+      - name: Create or Update Release
+        id: create_release
+        run: |
+          # Define the version tag
+          VERSION="v${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minor-version }}"
 
-    - name: Install .NET MAUI workloads
-      run: dotnet workload install maui-android
-    - name: Run build script
-      run: cmd /c ".\build.bat"
-      env:
-        KEYPASS: ${{ secrets.KEYPASS }}
-        NEW_VERSION: ${{ needs.prepare-version.outputs.new-version }} 
-        NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }} 
-   - name: Install GitHub CLI
-      uses: actions/setup-gh-cli@v1
+          # Check if the release already exists
+          if gh release view "$VERSION" --json url --jq .url; then
+            echo "Updating existing release $VERSION"
 
-    - name: Create or Update Release
-      id: create_release
-      run: |
-        # Define the version tag
-        VERSION="v${{ needs.prepare-version.outputs.versionCode }}${{ needs.prepare-version.outputs.minor-version }}"
+            # Update the release notes and include auto-generated notes
+            gh release edit "$VERSION" \
+              --notes-file Technical/release-base.md \
+              --generate-notes
 
-        # Check if the release already exists
-        if gh release view "$VERSION" --json url --jq .url; then
-          echo "Updating existing release $VERSION"
+            # Upload the artifacts to the existing release
+            gh release upload "$VERSION" output/*.apk output/*.msix --clobber
+          else
+            echo "Creating new release $VERSION"
 
-          # Update the release notes and include auto-generated notes
-          gh release edit "$VERSION" \
-            --notes-file Technical/release-base.md \
-            --generate-notes
-
-          # Upload the artifacts to the existing release
-          gh release upload "$VERSION" output/*.apk output/*.msix --clobber
-        else
-          echo "Creating new release $VERSION"
-
-          # Create a new release with the specified notes and auto-generated notes
-          gh release create "$VERSION" \
-            --title "$VERSION" \
-            --notes-file Technical/release-base.md \
-            --generate-notes \
-            output/*.apk output/*.msix
-        fi
-      env:
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+            # Create a new release with the specified notes and auto-generated notes
+            gh release create "$VERSION" \
+              --title "$VERSION" \
+              --notes-file Technical/release-base.md \
+              --generate-notes \
+              output/*.apk output/*.msix
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
