#92 add github cli

--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -74,6 +74,13 @@ jobs:
           NEW_VERSION_CODE: ${{ needs.prepare-version.outputs.versionCode }}
       - name: Install GitHub CLI
         uses: actions/setup-gh-cli@v1
+      - name: Install GitHub CLI
+       run: |
+         $cliUri = "https://github.com/cli/cli/releases/latest/download/gh_${{ runner.os }}_amd64.msi"
+         $cliPath = "$env:TEMP\gh_installer.msi"
+         Invoke-WebRequest -Uri $cliUri -OutFile $cliPath
+         Start-Process msiexec.exe -Wait -ArgumentList "/i $cliPath /quiet"
+       shell: powershell
       - name: Create or Update Release
         id: create_release
         run: |
