--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -76,7 +76,7 @@ jobs:
         run: |
           $cliUri = "https://github.com/cli/cli/releases/download/v2.57.0/gh_2.57.0_windows_amd64.msi"
           $cliPath = "$env:TEMP\gh_2.57.0_windows_amd64.msi"
-          curl -L $cliUri -o $cliPath
+          Invoke-WebRequest -Uri $cliUri -OutFile $cliPath
           Start-Process msiexec.exe -Wait -ArgumentList "/i $cliPath /quiet"
         shell: powershell
 
