--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Install .NET MAUI workloads
         run: dotnet workload install maui-android
       - name: Run build script
-        run: cmd /c ".\build.bat"
+        # run: cmd /c ".\build.bat"
         env:
           KEYPASS: ${{ secrets.KEYPASS }}
           NEW_VERSION: ${{ needs.prepare-version.outputs.new-version }}
@@ -78,6 +78,8 @@ jobs:
           $cliPath = "$env:TEMP\gh_2.57.0_windows_amd64.msi"
           Invoke-WebRequest -Uri $cliUri -OutFile $cliPath
           Start-Process msiexec.exe -Wait -ArgumentList "/i $cliPath /quiet"
+          $ghPath = "C:\Program Files\GitHub CLI"
+          Write-Output "PATH=$ghPath;$env:PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
         shell: powershell
 
       - name: Verify GitHub CLI Installation
