--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -68,6 +68,7 @@ jobs:
         run: dotnet workload install maui-android
       - name: Run build script
         # run: cmd /c ".\build.bat"
+        run: ls
         env:
           KEYPASS: ${{ secrets.KEYPASS }}
           NEW_VERSION: ${{ needs.prepare-version.outputs.new-version }}
