--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -13,7 +13,8 @@ on:
 
 jobs:
   prepare-version:
-    runs-on: [self-hosted, Linux, ubuntu-latest]
+    #runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
     outputs:
       new-version: ${{ steps.version.outputs.new-version }}
       versionCode: ${{ steps.version.outputs.versionCode }}
