--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -85,32 +85,13 @@ jobs:
         shell: powershell
 
       - name: Create or Update Release
-        id: create_release
-        run: |
-          # Define the version tag
-          $VERSION="${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minor-version }}"
-
-          # Check if the release already exists
-          if (gh release view "$VERSION" --json url --jq .url) {
-            Write-Host "Updating existing release $VERSION"
-
-            # Update the release notes and include auto-generated notes
-            gh release edit "$VERSION" `
-              --notes-file Technical/release-base.md `
-              --generate-notes
-
-            # Upload the artifacts to the existing release
-            gh release upload "$VERSION" output/*.apk output/*.msix --clobber
-          } else {
-            Write-Host "Creating new release $VERSION"
-
-            # Create a new release with the specified notes and auto-generated notes
-            gh release create "$VERSION" `
-              --title "$VERSION" `
-              --notes-file Technical/release-base.md `
-              --generate-notes `
-              output/*.apk
-          }
+        uses: softprops/action-gh-release@v1
+        with:
+          #files: output/*.apk,output/*.msix
+          tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minor-version }}
+          release_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minor-version }}
+          body_path: Technical/release-base.md
+          draft: true
+          prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
-        shell: powershell
