--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -32,7 +32,7 @@
 		<!-- Versions -->
 		<ApplicationDisplayVersion>2.1.1</ApplicationDisplayVersion>
 		<ApplicationVersion>2</ApplicationVersion>
-
+		
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
@@ -46,9 +46,8 @@
 		<GenerateTestArtifacts>True</GenerateTestArtifacts>
 		<AppInstallerUri>https://api.github.com/repos/BenKoncsik/KoOrderRegister/releases/latest</AppInstallerUri>
 		<HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
-		<Configurations>Debug;Release</Configurations>
-		<PackageIcon>$placeholder$.scale-125.png</PackageIcon>
-		<Platforms>x64</Platforms>
+		<DefaultLanguage>en</DefaultLanguage>
+		
 	
 		
 	</PropertyGroup>
@@ -58,7 +57,8 @@
 		<PackageCertificateThumbprint>52E6E26AD745DE7F7EB2CDC031509D57F78CEBF8</PackageCertificateThumbprint>
 		<PackageIdentityName>hu.kncsk.koorderregister</PackageIdentityName>
 		<PublishSingleFile>false</PublishSingleFile>
-		<Version>2.1.0.0</Version>
+		<Version>2.1.0</Version>
+		
 		<RuntimeIdentifier>win10-x64</RuntimeIdentifier>
 		<Platform>x64</Platform>
 		<Configuration>Release</Configuration>
@@ -66,6 +66,9 @@
 		<PublishReadyToRun>false</PublishReadyToRun>
 		<SelfContained>True</SelfContained>
 		<PublishAppxPackage>true</PublishAppxPackage>
+		<Configurations>Debug;Release</Configurations>
+		<PackageIcon>$placeholder$.scale-125.png</PackageIcon>
+		<Platforms>x64</Platforms>
 	</PropertyGroup>
 	
 	<PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows' and '$(Configuration)' == 'Debug'">
