--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,17 +33,45 @@ jobs:
           echo "::set-output name=minor-version::$MINOR"
           echo "Current version: $MAJOR.$MINOR.$PATCH"
           echo "Version Code: $VERSION_CODE"
-      - name: Commit and Push
+      - name: Configure Git
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+
+      - name: Create and switch to new branch
+        run: |
+          git checkout -b version-update/$MAJOR.$MINOR.$PATCH
+
+      - name: Commit changes
+        run: |
           git add version.txt
           git commit -m "Update version to $MAJOR.$MINOR.$PATCH"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+
+      - name: Push new branch to repository
+        uses: ad-m/github-push-action@v0.6.0
         with:
-          github_token: ${{ secrets.TOKEN }}
-          branch: ${{ env.branch-name }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: version-update/$MAJOR.$MINOR.$PATCH
+
+      - name: Merge branch into main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Merge the new branch into main
+          git checkout main
+          git pull origin main
+          git merge --no-ff version-update/$MAJOR.$MINOR.$PATCH -m "Merge version-update/$MAJOR.$MINOR.$PATCH into main"
+          # Push the updated main branch
+          git push origin main
+
+      - name: Delete the new branch locally and remotely
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Delete the branch locally
+          git branch -D version-update/$MAJOR.$MINOR.$PATCH
+          # Delete the branch remotely
+          git push origin --delete version-update/$MAJOR.$MINOR.$PATCH
 
   build:
     runs-on: [self-hosted, Windows]
