--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,69 +10,91 @@ on:
 
 
 jobs:
-  prepare-version:
-    runs-on: ubuntu-latest
-    outputs:
-      new-version: ${{ steps.version.outputs.new-version }}
-      versionCode: ${{ steps.version.outputs.versionCode }}
-      minor-version: ${{ steps.version.outputs.minor-version }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Show version.txt content
-        run: cat version.txt
-      - name: Read Version
-        id: version
-        run: |
-          awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt > temp_version.txt && mv temp_version.txt version.txt
-          MAJOR=$(awk -F'.' '{print $1}' version.txt)
-          MINOR=$(awk -F'.' '{print $2}' version.txt)
-          PATCH=$(awk -F'.' '{print $3}' version.txt)
-          VERSION_CODE=$MAJOR
-          echo "::set-output name=new-version::$MAJOR.$MINOR.$PATCH"
-          echo "::set-output name=versionCode::$VERSION_CODE"
-          echo "::set-output name=minor-version::$MINOR"
-          echo "Current version: $MAJOR.$MINOR.$PATCH"
-          echo "Version Code: $VERSION_CODE"
-      - name: Configure Git
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+prepare-version:
+  runs-on: ubuntu-latest
+  outputs:
+    new-version: ${{ steps.version.outputs.new-version }}
+    versionCode: ${{ steps.version.outputs.versionCode }}
+    minor-version: ${{ steps.version.outputs.minor-version }}
+  steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Fetch all history so we can access other branches
 
-      - name: Create and switch to new branch
-        run: |
-          git checkout -b version-update/$MAJOR-$MINOR-$PATCH
+    - name: Show version.txt content
+      run: cat version.txt
 
+    - name: Read Version
+      id: version
+      run: |
+        awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt > temp_version.txt && mv temp_version.txt version.txt
+        MAJOR=$(awk -F'.' '{print $1}' version.txt)
+        MINOR=$(awk -F'.' '{print $2}' version.txt)
+        PATCH=$(awk -F'.' '{print $3}' version.txt)
+        VERSION_CODE=$MAJOR
 
-      - name: Commit changes
-        run: |
-          git add version.txt
-          git commit -m "Update version to $MAJOR-$MINOR-$PATCH"
+        # Set outputs using $GITHUB_OUTPUT
+        echo "new-version=$MAJOR.$MINOR.$PATCH" >> $GITHUB_OUTPUT
+        echo "versionCode=$VERSION_CODE" >> $GITHUB_OUTPUT
+        echo "minor-version=$MINOR" >> $GITHUB_OUTPUT
 
-      - name: Push new branch to repository
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: version-update/$MAJOR-$MINOR-$PATCH
+        # Export variables to $GITHUB_ENV for use in later steps
+        echo "MAJOR=$MAJOR" >> $GITHUB_ENV
+        echo "MINOR=$MINOR" >> $GITHUB_ENV
+        echo "PATCH=$PATCH" >> $GITHUB_ENV
 
-      - name: Merge branch into main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Merge the new branch into main
-          git checkout main
-          git pull origin main
-          git merge --no-ff version-update/$MAJOR-$MINOR-$PATCH -m "Merge version-update/$MAJOR-$MINOR-$PATCH into main"
-          # Push the updated main branch
-          git push origin main
+        echo "Current version: $MAJOR.$MINOR.$PATCH"
+        echo "Version Code: $VERSION_CODE"
 
-      - name: Delete the new branch locally and remotely
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Delete the branch locally
-          git branch -D version-update/$MAJOR-$MINOR-$PATCH
-          # Delete the branch remotely
-          git push origin --delete version-update/$MAJOR-$MINOR-$PATCH
+    - name: Configure Git
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+
+    - name: Create and switch to new branch
+      run: |
+        git checkout -b version-update/$MAJOR-$MINOR-$PATCH
+
+    - name: Commit changes
+      run: |
+        git add version.txt
+        git commit -m "Update version to $MAJOR-$MINOR-$PATCH"
+
+    - name: Push new branch to repository
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: version-update/$MAJOR-$MINOR-$PATCH
+
+    - name: Merge branch into main
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        # Fetch the main branch
+        git fetch origin main
+
+        # Checkout the main branch
+        git checkout main
+
+        # Pull the latest changes
+        git pull origin main
+
+        # Merge the new branch into main
+        git merge --no-ff version-update/$MAJOR-$MINOR-$PATCH -m "Merge version-update/$MAJOR-$MINOR-$PATCH into main"
+
+        # Push the updated main branch
+        git push origin main
+
+    - name: Delete the new branch locally and remotely
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        # Delete the branch locally
+        git branch -D version-update/$MAJOR-$MINOR-$PATCH
+
+        # Delete the branch remotely
+        git push origin --delete version-update/$MAJOR-$MINOR-$PATCH
+
 
   build:
     runs-on: [self-hosted, Windows]
@@ -118,7 +140,7 @@ jobs:
           tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minor-version }}
           release_name: ${{ needs.prepare-version.outputs.new-version }}
           body_path: Technical/release_base.md
-          draft: true
+          draft: false
           prerelease: false
           generate_release_notes: true
         env:
