--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -80,13 +80,26 @@ jobs:
           title: "Update version to ${{ env.MAJOR }}.${{ env.MINOR }}.${{ env.PATCH }}"
           body: "This pull request updates the version to ${{ env.MAJOR }}.${{ env.MINOR }}.${{ env.PATCH }}."
 
-      - name: Auto-approve and merge pull request
-        if: ${{ github.event_name == 'push' }}
-        uses: ahmadnassri/action-auto-merge@v0.5.0
+      - name: Auto-merge pull request
+        uses: actions/github-script@v6
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          pull_request: "{{ steps.version.outputs.new-version }}"
-          merge_method: squash
+          script: |
+            const pr = await github.pulls.list({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              head: '${{ env.BRANCH_NAME }}',
+            });
+            
+            if (pr.data.length > 0) {
+              const prNumber = pr.data[0].number;
+              await github.pulls.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: prNumber,
+                merge_method: 'squash',
+              });
+            }
 
 
   build:
