--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,7 +7,9 @@ on:
   pull_request:
     branches:
       - main
-
+  push:
+    branches:
+      - main
 jobs:
   prepare-version:
     runs-on: ubuntu-latest
@@ -26,7 +28,7 @@ jobs:
       - name: Read Version
         id: version
         run: |
-          awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt > temp_version.txt && mv temp_version.txt version.txt
+          awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt
           MAJOR=$(awk -F'.' '{print $1}' version.txt)
           MINOR=$(awk -F'.' '{print $2}' version.txt)
           PATCH=$(awk -F'.' '{print $3}' version.txt)
@@ -55,7 +57,16 @@ jobs:
           BRANCH_NAME="version-update/${{ env.MAJOR }}-${{ env.MINOR }}-${{ env.PATCH }}-$(date +%s)"
           echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
           git checkout -b "$BRANCH_NAME"
-
+       
+      - name: Write Version
+        id: versionwrite
+        run: |
+          awk -F'.' '{print $1 "." ($2 + 1) "." $3}' version.txt > temp_version.txt && mv temp_version.txt version.txt
+          MAJOR=$(awk -F'.' '{print $1}' version.txt)
+          MINOR=$(awk -F'.' '{print $2}' version.txt)
+          PATCH=$(awk -F'.' '{print $3}' version.txt)
+          VERSION_CODE=$MAJOR
+        
       - name: Commit changes
         run: |
           git add version.txt
