--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,9 +7,14 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
 permissions:
   contents: write
   pull-requests: write
+  workflows: write
+
 
 jobs:
   prepare-version:
