--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -115,10 +115,10 @@ jobs:
             }
           github-token: ${{ secrets.GITHUB_TOKEN }}
           
-      - name: Delete the new branch locally
-        run: git branch -D ${{ env.BRANCH_NAME }}
+      - name: Delete remote branch after merge
+        run: gh api -X DELETE "repos/${{ github.repository }}/git/refs/heads/${{ env.BRANCH_NAME }}"
         env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
           
           
   build:
