--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -161,7 +161,7 @@ jobs:
       - name: Create or Update Release
         uses: softprops/action-gh-release@v1
         with:
-          files: output/*.apk,output/*.msix
+          files: output/*.apk,output/*.msix,KoOrderRegister\Technical\kor.pfx
           tag_name: ${{ needs.prepare-version.outputs.versionCode }}.${{ needs.prepare-version.outputs.minor-version }}
           release_name: ${{ needs.prepare-version.outputs.new-version }}
           body_path: Technical/release_base.md
