--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,6 +37,8 @@ jobs:
           echo "MAJOR=$MAJOR" >> $GITHUB_ENV
           echo "MINOR=$MINOR" >> $GITHUB_ENV
           echo "PATCH=$PATCH" >> $GITHUB_ENV
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Increment the MINOR version
         id: increment-minor
@@ -44,6 +46,8 @@ jobs:
           NEW_MINOR=$((MINOR + 1))
           echo "New MINOR version: $NEW_MINOR"
           echo "new-minor=$NEW_MINOR" >> $GITHUB_ENV
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Update the version using GitHub CLI
         run: |
@@ -54,14 +58,18 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/variables/STABIL_VERSION \
             -f "name=STABIL_VERSION" -f "value=$NEW_VERSION"
-
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}
+          
       - name: Set outputs for the new version
         id: version
         run: |
           VERSION_CODE="$MAJOR"
           echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "versionCode=$VERSION_CODE" >> $GITHUB_OUTPUT
-          echo "minor-version=$NEW_MINOR" >> $GITHUB_OUTPUT     
+          echo "minor-version=$NEW_MINOR" >> $GITHUB_OUTPUT  
+        env:
+          GH_TOKEN: ${{ secrets.TOKEN }}          
         
   build:
     runs-on: [self-hosted, Windows]
@@ -114,7 +122,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
 
- 
+
 
 
  
